# vim-buffer

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml  typos.toml
.github/workflows/: build.yml  clippy.yml  coverage.yml  docs.yml  fmt.yml  rustdoc.yml  rustfmt.yml  spelling.yml  taplo.yml  tests.yml
examples/: cli.rs  hello_world.rs  key_events.rs
src/: action.rs  bounded_usize.rs  buffer.rs  lib.rs  mode.rs  tests.rs
src/buffer/: action.rs  api.rs  bounded_usize.rs  debug  history.rs  is_indent.rs  keymaps.rs  last_action.rs  macros.rs  mod.rs  o_pending.rs  registers.md  registers.rs  tests.rs  update.rs
src/buffer/mode/: all.rs  insert.rs  mod.rs  normal.rs  replace.rs  tests.rs  traits.rs  update.rs
src/buffer/update/: goto.rs  history.rs  mod.rs  operator.rs  utils.rs
src/event_parser/: mod.rs  state.rs  tests.rs
src/event_parser/chevron_parser/: char_modifier.rs  key.rs  mod.rs  modified_key.rs  named_key.rs  non_empty_modifier.rs  state.rs
src/mode/: all.rs  insert.rs  mod.rs  normal.rs  tests.rs
src/utils/: array.rs  mod.rs
tests/: api.rs  common.rs  event_parser.rs  history.rs  insert.rs  keys.rs  normal.rs  registers.rs  replace.rs
